deploy: 29dcaf3bd4fe5c90f06c78879799121c17c20e82

--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@ for<br>
 </ul>
 <h3 id="my-contribution">My Contribution</h3>
 <ul>
-<li>This needs to be updated to reflect a team introduction</li>
+<li>Selected gas sensor and designed rover and screen display cover</li>
 <li>Content should also help an unfamiliar reader navigate to areas of interest. Information like:</li>
 </ul>
 <p>To review the details listed of the material used to construct the subsection, you can review it in the <a href="https://embedded-systems-design.github.io/EGR304DataSheetTemplate/03-BOM/BOM/">"BOM"</a> section of the datasheet.</p>
