deploy: 86fb3520d7a0adf384ae0405bd383d4d268bb758

--- a/index.html
+++ b/index.html
@@ -857,8 +857,13 @@ for<br>
 </ul>
 <h3 id="my-contribution">My Contribution</h3>
 <ul>
-<li>Selected gas sensor and designed rover and screen display cover</li>
-<li>Content should also help an unfamiliar reader navigate to areas of interest. Information like:</li>
+<li>MQ-2 gas sensor:
+  Detecting early fire indicators is critical for wildfire prevention system, where even a small ignition can rapidly escalate into a destructive wildfire. Among    verious gas and smoke options. Created code and calibrated to detect gasses by using ratios.
+  Rs= Sensor resistance when gas is present
+  Ro= Sensor resistance in clean air</li>
+<li>Design rover and display cover:
+  designed and 3D printed using SolidWorks. 
+   Information like:</li>
 </ul>
 <p>To review the details listed of the material used to construct the subsection, you can review it in the <a href="https://embedded-systems-design.github.io/EGR304DataSheetTemplate/03-BOM/BOM/">"BOM"</a> section of the datasheet.</p>
 <p>For all the sections</p>
