deploy: 0cb26bb9f8211a824f7e54d5cbed6b4a07bb13cc

--- a/index.html
+++ b/index.html
@@ -862,8 +862,7 @@ for<br>
   Rs= Sensor resistance when gas is present
   Ro= Sensor resistance in clean air</li>
 <li>Design rover and display cover:
-  designed and 3D printed using SolidWorks. 
-   Information like:</li>
+  designed and 3D printed using SolidWorks. </li>
 </ul>
 <p>To review the details listed of the material used to construct the subsection, you can review it in the <a href="https://embedded-systems-design.github.io/EGR304DataSheetTemplate/03-BOM/BOM/">"BOM"</a> section of the datasheet.</p>
 <p>For all the sections</p>
