deploy: edf01b095e4da41330977a2ff3d0d3f776c37893

--- a/03-BOM/BOM/index.html
+++ b/03-BOM/BOM/index.html
@@ -861,7 +861,7 @@
   <h1>Bill of Materials</h1>
 
 <h2 id="overview">Overview</h2>
-<p>written context</p>
+<p>ordered a bundle just incase if sensor malfunctioned during testing.</p>
 <h2 id="bill-of-materials-table">Bill of Materials Table</h2>
 <table>
 <thead>
@@ -895,7 +895,7 @@
 <li>You could also import your BOM via a screenshot of the spreadsheet created BOM</li>
 </ul>
 <h2 id="bill-of-materials-photo">Bill of Materials Photo</h2>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="BOM-Screenshot.png" data-desc-position="bottom"><img _2000_="&quot;2000&quot;" alt="" src="BOM-Screenshot.png" style="style" width:="width:"></a>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../BOM.png" data-desc-position="bottom"><img _2000_="&quot;2000&quot;" alt="" src="../BOM.png" style="style" width:="width:"></a>
 <strong>Figure 2:</strong> Bill of Materials as a screenshot.</p>
 
 
